--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/sign-up.css">
         <link rel="stylesheet" href="/css/login.css">
-        <title>Sign In</title>
+        <title>Login</title>
     </head>
 
     <body>
