login page bugs fixed

--- a/html/login.html
+++ b/html/login.html
@@ -20,8 +20,8 @@
             </div>
             <form action="">
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="fullname" name="fullname" placeholder="enter full name">
-                    <label for="fullname">Full Name</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="enter email">
+                    <label for="email">Email</label>
                 </div>
 
                 <div class="form-floating mb-3">
