--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
         integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>home</title>
 </head>
 
 <body>
@@ -21,37 +22,69 @@
             <button class="viewal">View All <i class="fas fa-arrow-right"></i></button>
 
         </div>
-        <div class="side-boxes">
-            <div class="image-box">
-                <img src="assets/122.jpg">
-                <p class="imagetxt">hello I am a developer.</p>
-                <div class="conthandle">
-                    <div class="handles">
-                        <i class="fab fa-github fa-2x"></i>
+        <div class="rightboxx">
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
-                    <div class="handles">
-                        <i class="fab fa-facebook fa-2x"></i>
-                    </div>
-                    <div class="handles">
-                        <i class="fab fa-twitter fa-2x"></i>
-                    </div>
-                    <div class="handles">
-                        <i class="fab fa-linkedin-in fa-2x"></i>
-                    </div>
+                    <p> Developer 1</p>
                 </div>
-                <p> Developer 1</p>
             </div>
-        </div>
-        <div class="side-boxes">
-            <div class="image-box">
-                <img src="assets/122.jpg">
-                <p> Developer 2</p>
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+                    </div>
+                    <p> Developer 2</p>
+                </div>
             </div>
-        </div>
-        <div class="side-boxes">
-            <div class="image-box">
-                <img src="assets/122.jpg">
-                <p> Developer 3</p>
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+                    </div>
+                    <p> Developer 3</p>
+                </div>
             </div>
         </div>
     </div>
@@ -108,21 +141,12 @@
 
 
     </div>
-    <div class="two-box">
-        <div class="leftbox">
-            <h4>Want be a<br> Mentor?</h4>
-            <button class="viewal">Apply Now <i class="fas fa-arrow-right"></i></button>
 
-        </div>
-        <div class="rightbox">
-            <h4>Want to Discover<br>Courses?</h4>
-            <button class="viewal">Enroll Now<i class="fas fa-arrow-right"></i></button>
-        </div>
-    </div>
     <footer class="box7">
+
         <div class="box">
             <h2>Educore.</h2>
-            <p>Experience the best pedagogy<br>with this E-learning platform</p>
+            <p id="clr">Experience the best pedagogy with this E-learning platform.</p>
             <div class="conthandle2">
                 <div class="handles2">
                     <i class="fab fa-github fa-2x"></i>
@@ -169,8 +193,21 @@
         </div>
         <div class="box">
             <h2>Subscribe to our <br>Newsletter</h2>
+            <input type="text" placeholder="Enter Your Email" name="mail"><input type="submit" value="Submit">
         </div>
-    </footer>>
+    </footer>
+    <div class="two-box">
+        <div class="leftbox">
+            <h3>Want be a<br> Mentor?</h3>
+            <button class="viewal1">Apply Now <i class="fas fa-arrow-right"></i></button>
+
+        </div>
+        <div class="rightbox">
+            <h3>Want to Discover<br>Courses?</h3>
+            <button class="viewal2">Enroll Now <i class="fas fa-arrow-right"></i></button>
+        </div>
+    </div>
+
 </body>
 
 </html>
