--- a/html/corsedtail.html
+++ b/html/corsedtail.html
@@ -120,8 +120,8 @@
         <h2>frequently Asked Questions</h2>
         <div class="questions">
             <div class="leftside">
-                <div id="que" class="recbox">what skills do i need to enroll this course? <i
-                        class="fas fa-chevron-right"></i></div>
+                <div id="que" onclick="ask();" class="recbox">what skills do i need to enroll this course? <i
+                        class="fas fa-chevron-right" id="fas"></i></div>
                 <div id="que" class="recbox">what will i learn in this course? <i class="fas fa-chevron-right"></i>
                 </div>
                 <div id="que" class="recbox">How long it will take to finish this course? <i
@@ -130,7 +130,7 @@
                         class="fas fa-chevron-right"></i></div>
 
             </div>
-            <div class="shwans">
+            <div id="shwans" class="shwans">
                 <h5>What skills do i need to enroll this course?</h5>
                 <p>Every course has been designed for people who have
                     little to no experience in drawing. All you need is
