--- a/html/index.html
+++ b/html/index.html
@@ -1,151 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
-            integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
-        <link rel="stylesheet" href="../css/index.css">
-        <title>home</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+        integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <title>home</title>
+</head>
 
-    <body>
-        <div class="box5">
-            <div class="left-box">
-                <h2 class="line">Instructors</h2>
-                <h4>Meet Your Mentors</h4>
-                <p>Top Instructors from around the world teach tons of students on Educore</p>
-                <button class="viewal">View All <i class="fas fa-arrow-right"></i></button>
+<body>
+    <div class="box5">
+        <div class="left-box">
+            <h2 class="line">Instructors</h2>
+            <h4>Meet Your Mentors</h4>
+            <p>Top Instructors from around the world teach tons of students on Educore</p>
+            <button class="viewal">View All <i class="fas fa-arrow-right"></i></button>
 
+        </div>
+        <div class="rightboxx">
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+                    </div>
+                    <p> Developer 1</p>
+                </div>
             </div>
-            <div class="rightboxx">
-                <div class="side-boxes">
-                    <div class="image-box">
-                        <img src="assets/124.jpg">
-                        <p class="imagetxt">hello I am a developer.</p>
-                        <div class="conthandle">
-                            <div class="handles">
-                                <i class="fab fa-github"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-facebook"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-linkedin-in"></i>
-                            </div>
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
                         </div>
-                        <p> Developer 1</p>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
+                    <p> Developer 2</p>
                 </div>
-                <div class="side-boxes">
-                    <div class="image-box">
-                        <img src="assets/124.jpg">
-                        <p class="imagetxt">hello I am a developer.</p>
-                        <div class="conthandle">
-                            <div class="handles">
-                                <i class="fab fa-github"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-facebook"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-linkedin-in"></i>
-                            </div>
+            </div>
+            <div class="side-boxes">
+                <div class="image-box">
+                    <img src="assets/124.jpg">
+                    <p class="imagetxt">hello I am a developer.</p>
+                    <div class="conthandle">
+                        <div class="handles">
+                            <i class="fab fa-github"></i>
                         </div>
-                        <p> Developer 2</p>
-                    </div>
-                </div>
-                <div class="side-boxes">
-                    <div class="image-box">
-                        <img src="assets/124.jpg">
-                        <p class="imagetxt">hello I am a developer.</p>
-                        <div class="conthandle">
-                            <div class="handles">
-                                <i class="fab fa-github"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-facebook"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                            <div class="handles">
-                                <i class="fab fa-linkedin-in"></i>
-                            </div>
+                        <div class="handles">
+                            <i class="fab fa-facebook"></i>
                         </div>
-                        <p> Developer 3</p>
+                        <div class="handles">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="handles">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
+                    <p> Developer 3</p>
                 </div>
             </div>
         </div>
-        <div class="box6">
-            <div class="card-box">
-                <div class="cards">
-                    <div class="upperhalf">
-                        <img src="assets/123.jpg">
-                        <div class="nam">
-                            <h2>Jacob Jones</h2>
-                            <h4>Data Analyst</h4>
-                        </div>
+    </div>
+    <div class="box6">
+        <div class="card-box">
+            <div class="cards">
+                <div class="upperhalf">
+                    <img src="assets/123.jpg">
+                    <div class="nam">
+                        <h2>Jacob Jones</h2>
+                        <h4>Data Analyst</h4>
                     </div>
-                    <div class="lowerhalf">
-                        <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.
-                        </p>
-                    </div>
-                    <i class="fas fa-quote-right"></i>
                 </div>
-                <div class="cards">
-                    <div class="upperhalf">
-                        <img src="assets/123.jpg">
-                        <div class="nam">
-                            <h2>Jacob Jones</h2>
-                            <h4>Data Analyst</h4>
-                        </div>
-                    </div>
-                    <div class="lowerhalf">
-                        <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.
-                        </p>
-                    </div>
-                    <i class="fas fa-quote-right"></i>
+                <div class="lowerhalf">
+                    <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.</p>
                 </div>
-                <div class="cards">
-                    <div class="upperhalf">
-                        <img src="assets/123.jpg">
-                        <div class="nam">
-                            <h2>Jacob Jones</h2>
-                            <h4>Data Analyst</h4>
-                        </div>
-                    </div>
-                    <div class="lowerhalf">
-                        <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.
-                        </p>
-                    </div>
-                    <i class="fas fa-quote-right"></i>
-                </div>
+                <i class="fas fa-quote-right"></i>
             </div>
-            <div class="text-box2">
-                <div class="centerbox">
-                    <h2 class="line">Testimonials</h2>
-                    <h4>What student say</h4>
-                    <p>600+ folks are already learning on Educore</p>
-                    <button class="viewal">View All Reviews <i class="fas fa-arrow-right"></i></button>
+            <div class="cards">
+                <div class="upperhalf">
+                    <img src="assets/123.jpg">
+                    <div class="nam">
+                        <h2>Jacob Jones</h2>
+                        <h4>Data Analyst</h4>
+                    </div>
                 </div>
+                <div class="lowerhalf">
+                    <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.</p>
+                </div>
+                <i class="fas fa-quote-right"></i>
             </div>
-
-
+            <div class="cards">
+                <div class="upperhalf">
+                    <img src="assets/123.jpg">
+                    <div class="nam">
+                        <h2>Jacob Jones</h2>
+                        <h4>Data Analyst</h4>
+                    </div>
+                </div>
+                <div class="lowerhalf">
+                    <p>Journey with Educore was way Beyond adventurous. It opens the mind to think out of the box.</p>
+                </div>
+                <i class="fas fa-quote-right"></i>
+            </div>
+        </div>
+        <div class="text-box2">
+            <div class="centerbox">
+                <h2 class="line">Testimonials</h2>
+                <h4>What student say</h4>
+                <p>600+ folks are already learning on Educore</p>
+                <button class="viewal">View All Reviews <i class="fas fa-arrow-right"></i></button>
+            </div>
         </div>
 
-        <footer class="box7">
+
+    </div>
+
+    <footer class="box7">
+        <div class="boxxx">
 
             <div class="box">
                 <h2>Educore.</h2>
@@ -198,19 +196,26 @@
                 <h2>Subscribe to our <br>Newsletter</h2>
                 <input type="text" placeholder="Enter Your Email" name="mail"><input type="submit" value="Submit">
             </div>
-        </footer>
-        <div class="two-box">
-            <div class="leftbox">
-                <h3>Want be a<br> Mentor?</h3>
-                <button class="viewal1">Apply Now <i class="fas fa-arrow-right"></i></button>
-
-            </div>
-            <div class="rightbox">
-                <h3>Want to Discover<br>Courses?</h3>
-                <button class="viewal2">Enroll Now <i class="fas fa-arrow-right"></i></button>
-            </div>
+        </div>
+        <div class="copyright">
+            <p> © Copyright 2021 Educore </p>
         </div>
 
-    </body>
+    </footer>
+
+    <div class="two-box">
+        <div class="leftbox">
+            <h3>Want be a<br> Mentor?</h3>
+            <button class="viewal1">Apply Now <i class="fas fa-arrow-right"></i></button>
+
+        </div>
+        <div class="rightbox">
+            <h3>Want to Discover<br>Courses?</h3>
+            <button class="viewal2">Enroll Now <i class="fas fa-arrow-right"></i></button>
+        </div>
+
+    </div>
+
+</body>
 
 </html>
