--- a/html/landing.html
+++ b/html/landing.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/landing.css">
         <title>landing page</title>
 
@@ -23,7 +24,7 @@
                         <br>
                         <p>Everyone is creative,take the next step to Enhance your skill with Educore</p>
                         <br>
-                        <button>Enroll now</button>
+                        <button class="btn extra" type="submit">Enroll now</button>
                     </div>
                 </div>
                 <div class="head-second">
@@ -41,13 +42,13 @@
                 <div class="images-content">
                     <div class="gallary-imges">
                         <div class="grid-first">
-                            <img width="100%" height="100%" src="../images/1.png" alt="gp">
+                            <img width="100%" height="100%" src="../images/Image 1.png" alt="gp">
                         </div>
                         <div class=" grid-second">
-                            <img width="100%" height="100%" src="../images/ 2.png" alt="gp">
+                            <img width="100%" height="100%" src="../images/Image 2.png" alt="gp">
                         </div>
                         <div class="grid-third">
-                            <img width="100%" height="100%" src="../images/ 3.png" alt="gp">
+                            <img width="100%" height="100%" src="../images/Image 3.png" alt="gp">
                         </div>
                     </div>
                 </div>
@@ -81,21 +82,21 @@
                     <p><span>Discover your way to sucess</span><br><br> To uplift and unlinit your knowledge,Educore is
                         providing you the best Mentors with quality pedagogy</p>
                     <br>
-                    <button class="btn"> Learn More&nbsp;<i class="arrow right"></i></button>
+                    <button class="btn extra"> Learn More&nbsp;<i class="arrow right"></i></button>
                 </div>
 
                 <div class="skills-images">
                     <div class="skills-images-main">
-                        <div cla  ss="griding">
-                            <img src="Read.svg" alt="gp">
+                        <div cla ss="griding">
+                            <img src="../images/Read.svg" alt="gp">
                             <p>Attain Mastery in the latest skills</p>
                         </div>
                         <div class="griding">
-                            <img src="Career.svg" alt="gp">
+                            <img src="../images/Career.svg" alt="gp">
                             <p>Discover Job-ready Career Agilities</p>
                         </div>
                         <div class="griding">
-                            <img src="certificate.svg" alt="gp">
+                            <img src="../images/certificate.svg" alt="gp">
                             <p>Get Certified </p>
                         </div>
                     </div>
