--- a/html/payment.html
+++ b/html/payment.html
@@ -20,6 +20,34 @@
 
 	<body>
 		<!--  nav bar -->
+		<body onload="show();">
+    <header>
+        <div class="toggle-btn" onclick="myfuntion();">
+            <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+        </div>
+        <div class="logo">
+            <h2>Educore.</h2>
+        </div>
+
+        <nav id="nav">
+            <ul>
+                <li><a href="#">Browse <i class="fa fa-chevron-down"></i></a></li>
+                <li>
+                    <form action="#" method="POST">
+                        <button class="serch">
+                            <i class="fa fa-search"></i>
+                        </button type="submit"><input type="search" placeholder="What do you want to learn?" required>
+                    </form>
+                </li>
+                <li><a href="#">Student Pricing</a></li>
+                <li><a href="#">For Mentors</a></li>
+                <li><a href="#"><i class="fa fa-bell-o "></i></a></li>
+                <li><img src="images/Profile Dropdown.png" alt="user-icon" width="100%" height="100%"><i
+                        class="fa fa-chevron-down"></i></li>
+            </ul>
+        </nav>
+
+    </header>
 		<div class="upper_container">
 			<div class="payment_container">
 				<h4>Start Your 14 days free trial</h4>
