--- a/html/alcourses.html
+++ b/html/alcourses.html
@@ -36,7 +36,7 @@
                 <li><a href="#">For Mentors</a></li>
                 <li><a href="#"><i class="fa fa-bell-o "></i></a></li>
                 <li><img src="images/Profile Dropdown.png" alt="user-icon" width="100%" height="100%"><i
-                        class="fa fa-chevron-down"></i></li>
+                        class="fa fa-chevron-down" id="col"></i></li>
             </ul>
         </nav>
 
